<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/medium"
                android:includeFontPadding="false"
                android:text="@string/tagging_date"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/calendar"
                    app:tint="@color/edit_text_icon_color_selector" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:fontFamily="@font/regular"
                    android:hint="Select Tagging Date"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_3sdp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/_13sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/txtValidDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/medium"
                android:includeFontPadding="false"
                android:text="@string/valid_date"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llValidDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/calendar"
                    app:tint="@color/edit_text_icon_color_selector" />

                <TextView
                    android:id="@+id/tvValidDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:fontFamily="@font/regular"
                    android:hint="Select Valid up to"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_3sdp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/_13sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/medium"
                android:includeFontPadding="false"
                android:text="@string/rfid_tag_no"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_11sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    app:boxBackgroundMode="none"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray"
                    app:errorEnabled="false"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false"
                    app:placeholderText="Enter Microchip no"
                    app:placeholderTextColor="@color/textHintColor"
                    app:startIconDrawable="@drawable/microchip"
                    app:startIconTint="@color/edit_text_icon_color_selector">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etRFID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:fontFamily="@font/regular"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="number"
                        android:padding="@dimen/_15sdp"
                        android:maxLength="20"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_13sdp" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/medium"
                android:includeFontPadding="false"
                android:text="@string/visual_tag_no"
                android:textColor="@color/textColor"
                android:textSize="13sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                app:boxBackgroundMode="none"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gray"
                app:errorEnabled="false"
                app:expandedHintEnabled="false"
                app:hintEnabled="false"
                app:placeholderText="Enter Visual TAG No"
                app:placeholderTextColor="@color/textHintColor"
                app:startIconDrawable="@drawable/tag"
                app:startIconTint="@color/edit_text_icon_color_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etVisualTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/regular"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_13sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/medium"
                android:includeFontPadding="false"
                android:text="@string/animal_type"
                android:textColor="@color/textColor"
                android:textSize="13sp" />

            <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                android:id="@+id/spinnerAnimalType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edit_text_background"
                android:padding="@dimen/_5sdp"
                app:smsp_arrowColor="@color/darkGray"
                app:smsp_arrowPaddingLeft="-2dp"
                app:smsp_arrowSize="@dimen/_10sdp"
                app:smsp_enableErrorLabel="false"
                app:smsp_enableFloatingLabel="false"
                app:smsp_enableSearchHeader="false"
                app:smsp_hint="Select Animal Type"
                app:smsp_hintColor="@color/textHintColor"
                app:smsp_hintSize="@dimen/_13sdp"
                app:smsp_isSearchable="true"
                app:smsp_itemColor="@color/textColor"
                app:smsp_itemListColor="@color/textHintColor"
                app:smsp_itemListHintColor="@color/textHintColor"
                app:smsp_itemSize="@dimen/_13sdp"
                app:smsp_itemView="@layout/spinner_list_item"
                app:smsp_selectedItemListColor="@color/textColor"
                app:smsp_underlineSize="0dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/layoutBackground"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_15sdp"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:includeFontPadding="false"
                android:text="Next step"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/next"
                app:tint="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>